--- a/styles/bs.css
+++ b/styles/bs.css
@@ -490,6 +490,7 @@ img:is([sizes="auto" i], [sizes^="auto," i]) {
 
 .site-info .site-name {
   font-family: "Fira Sans", sans-serif;
+  text-decoration: none;
 }
 
 html * {
