las txtdcor atmpt

--- a/styles/print.css
+++ b/styles/print.css
@@ -76,7 +76,7 @@ Andreas Hecht in https://www.jotform.com/blog/css-perfect-print-stylesheet-98272
 	a:link, a:visited, a {
 		background: transparent;
 		font-weight: bold;
-		text-decoration: underline;
+		text-decoration: none !important;
 		text-align: left;
 	}
 	a {
